compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__custom_types__zero_arity_imported_unqualified.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other.{Two}\npub fn main() {\n  Two\n}"
---
let
  mod''other = builtins.import ./../other.nix;
  inherit (builtins.import ./../other.nix) Two;
  
  main = {}: Two;
in { inherit main; }
